save loader location fixes, validation fixes

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -1072,6 +1072,14 @@ div.right-panel {
   position: relative;
   margin-top: 30px;
 }
+.first-name-container .float-input-label,
+.last-name-container .float-input-label {
+  margin-bottom: 0;
+}
+.first-name-container,
+.last-name-container {
+  margin-bottom: 0.5em;
+}
 .form-with-floats .float-input-label > label {
   position: absolute;
   top: 7px;
@@ -1599,7 +1607,8 @@ div.biopsy-option:last-of-type{
   padding: 2em 2.5em;
 }
 .modal-title {
-  font-size: 1.3em;
+  font-weight: normal;
+  font-size: 1.1em;
 }
 .modal-footer {
   padding: 1em;
