--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1163,7 +1163,14 @@ h4.detail-title {
 
   }
 }
-
+.first-name-container .float-input-label,
+.last-name-container .float-input-label {
+  margin-bottom: 0;
+}
+.first-name-container,
+.last-name-container {
+  margin-bottom: 0.5em;
+}
 .profile-item-container {
   background-color: #EFF5F3;
   /*background-color: rgba(173, 193, 197, 0.16);*/
@@ -1733,7 +1740,8 @@ div.biopsy-option:last-of-type{
   padding: 2em 2.5em;
 }
 .modal-title {
-  font-size: 1.3em;
+  font-weight: normal;
+  font-size: 1.1em;
 }
 .modal-footer {
   padding: 1em;
