--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -1048,6 +1048,14 @@ h4.detail-title {
   color: #aaa;
   opacity: 0;
 }
+.first-name-container .float-input-label,
+.last-name-container .float-input-label {
+  margin-bottom: 0;
+}
+.first-name-container,
+.last-name-container {
+  margin-bottom: 0.5em;
+}
 .form-with-floats .form-group > label.after-load {
   transition: all 0.1s linear;
   opacity: 1;
@@ -1600,7 +1608,8 @@ div.biopsy-option:last-of-type{
   padding: 2em 2.5em;
 }
 .modal-title {
-  font-size: 1.3em;
+  font-weight: normal;
+  font-size: 1.1em;
 }
 .modal-footer {
   padding: 1em;
