--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1154,7 +1154,14 @@ div.right-panel {
 
   }
 }
-
+.first-name-container .float-input-label,
+.last-name-container .float-input-label {
+  margin-bottom: 0;
+}
+.first-name-container,
+.last-name-container {
+  margin-bottom: 0.5em;
+}
 .profile-item-container {
   background-color: #EFF5F3;
   /*background-color: rgba(173, 193, 197, 0.16);*/
@@ -1701,7 +1708,8 @@ div.noOrg-container {
   padding: 2em 2.5em;
 }
 .modal-title {
-  font-size: 1.3em;
+  font-weight: normal;
+  font-size: 1.1em;
 }
 .modal-footer {
   padding: 1em;
