--- a/portal/templates/profile_create.html
+++ b/portal/templates/profile_create.html
@@ -35,7 +35,7 @@
                     </div>
                     <div class="form-group float-input-label profile-section" id="emailGroup">
                         <label for="email">{{ _("Email Address") }}</label>
-                        <input type="text" class="form-control" id="email" name="email" error-field="erroremail" placeholder="{{ _('Your email') }}" value="" data-customemail="true" required />
+                        <input type="text" class="form-control" id="email" name="email" autocomplete="false" error-field="erroremail" placeholder="{{ _('Your email') }}" value="" data-customemail="true" required />
                         <div id="noEmailContainer">
                             <input type="checkbox" id="noEmail" class="text-muted">&nbsp;&nbsp;<span class="text-muted">User does not have email address</span>
                         </div>
@@ -133,18 +133,15 @@ $(document).ready(function(){
         $("#updateProfile").attr("disabled", false);
     });
 
-    $("#noEmail").on("click", function() {
+    $("#noEmail").on("click, change", function() {
         if ($(this).is(":checked")) {
-            $("#email").val("");
-            $("#email").attr("disabled", true);
-            $("#email").removeAttr("required");
-            $("#email").removeAttr("data-customemail");
-            setTimeout('$("#erroremail").text(""); $("#email").closest("form-group").removeClass("has-error");', 500);
+            $("#erroremail").hide();
+            $("#email").val("").attr("disabled", true).removeAttr("required").removeAttr("data-customemail");
+            setTimeout('$("#erroremail").text(""); $("#email").closest("form-group").removeClass("has-error"); $("#email").css("border-color", "#ccc");', 600);
         }
         else {
-            $("#email").attr("disabled", false);
-            $("#email").attr("required", "required");
-            $("#email").attr("data-customemail", "true");
+            $("#erroremail").show();
+            $("#email").attr("disabled", false).attr("required", "required").attr("data-customemail", "true");
         };
     });
 
