--- a/portal/templates/initial_queries_macros.html
+++ b/portal/templates/initial_queries_macros.html
@@ -92,7 +92,7 @@
       <div id="bdGroup">
           <input type="hidden" name="birthDate" id="birthday" value="">
           <div class="form-group">
-            <label>{{ _("Birth Date") }} <span class="bd-optional text-muted">(optional)</span></label>
+            <label>{{ _("Birth Date") }} <span class="bd-optional text-muted">{{_("(optional)")}}</span></label>
             <div class="row">
               <div class="col-md-4 col-xs-4">
                 <input class="form-control bd-element init-queries-field" id="date" name="birthdayDate" placeholder="DD" type="text" maxlength="2" pattern="\d[\d]?" data-error="The birth day field is required and must be valid format" required />
