--- a/portal/templates/flask_user/_macros.html
+++ b/portal/templates/flask_user/_macros.html
@@ -95,7 +95,7 @@
     <div class="row">
         <div class="col-xs-6 col-lg-8 footer-container">
             <div class="copyright-container">
-                <p><small><a href="{{PORTAL}}/about">{{ _("About") }}</a> | <a href="{{PORTAL}}/contact">{{ _("Contact") }}</a> | <a href="{{PORTAL}}/privacy">{{ _("Privacy") }}</a></small></p>
+                <p><small><a href="{{PORTAL}}{{url_for('portal.about')}}">{{ _("About") }}</a> | <a href="{{PORTAL}}{{url_for('portal.contact')}}">{{ _("Contact") }}</a> | <a href="{{PORTAL}}{{url_for('portal.privacy')}}">{{ _("Privacy") }}</a></small></p>
                 <p><small class="text-muted">&copy;2017 Movember Foundation. All rights reserved. A registered 501(c)3 non-profit organization.</small></p>
             </div>
         </div>
