--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -1438,7 +1438,7 @@
                 <div class="profile-item-container custom-container-item">
                     <h4 id="customEnterManuallyLoc" class="profile-item-title index-item">{{_("Enter manually")}}</h4><br/>
                     <div class="custom-container-content enter-manual-container text-muted">{{_("Enter questionnaire responses on patient's behalf. Helpful if responses have been completed on paper.")}}</div><br/>
-                    <a class="btn btn-tnth-primary custom-btn" id="assessmentLink" href="/api/present-assessment?instrument_id=eortc&instrument_id=hpfs&instrument_id=prems&instrument_id=irondemog&subject_id={{person.id}}&initial=true">{{_("Enter manually")}}</a>
+                    <a class="btn btn-tnth-primary custom-btn" id="assessmentLink" href="{{person.assessment_link}}">{{_("Enter manually")}}</a>
 
                 </div>
             </div>
