--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -39,7 +39,7 @@
 @sectionTitleColor: #526960;
 @sectionBorderColor: #E0E6E3;
 @rowBackgroundColor: #7d826e;
-@navBarBgColor: #9b9c95;
+@navBarBgColor: #607D8B;
 @toolTipColor: #575a4d;
 @menuTextColor: #494e37;
 @menuTextHoverColor: #337ab7;
@@ -77,7 +77,7 @@ body {
   border-radius: 0;
   font-size: @btnSize;
   letter-spacing: 1px;
-  padding: 0.7em;
+  padding: 0.8em;
   letter-spacing: 2px;
   color: #333f4b;
   background-color: #FFF;
@@ -235,6 +235,10 @@ select:not([multiple]) {
  {
   display: none;
 }
+#tnthNavWrapper {
+  z-index: 20;
+  position: relative;
+}
 #mainHolder {
   visibility: hidden;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
@@ -242,8 +246,36 @@ select:not([multiple]) {
   -moz-opacity: 0;
   -khtml-opacity: 0;
   opacity: 0;
-  -webkit-transition: visibility 0.5s, opacity 0.3s ease-in;
-  transition: visibility 0.5s, opacity 0.3s ease-in;
+  -webkit-transition: visibility 0.6s, opacity 0.7s ease-in;
+  transition: visibility 0.6s, opacity 0.7s ease-in;
+}
+
+#mainDiv.profile {
+  min-height: 110vh;
+  overflow: hidden;
+  background: #858681;
+  z-index: -2;
+ .detail-title {
+    color: #ebefeb;
+    letter-spacing: 1px;
+  }
+  #profileHeader * {
+    color: #FFF;
+    letter-spacing: 1px;
+  }
+  #bdGroup {
+    margin-bottom: 0.2em;
+  }
+  #profileStudyIDContainer {
+    margin-bottom: 2em;
+  }
+  .copyright-container *,
+  .logo-container * {
+    color: #F5F5F5;
+  }
+  .footer-wrapper {
+    margin-left: 25%;
+  }
 }
 
 /** Spacing for mainNav area so rest of page that doesn't get pushed down if portal_wrapper takes awhile to load **/
@@ -260,14 +292,13 @@ select:not([multiple]) {
   transition: transform 0.5s ease;
   right: 0;
   padding: 1.5em 0.8em;
-  font-size: 0.8em;
+  font-size: 0.9em;
   min-height: 370px;
   height: 30%;
   color: @menuTextColor;
   width: 200px;
   border: solid 1px @sectionBorderColor;
   margin-left: 4em;
-  border-radius: 8px;
   z-index: 11;
   background-color: @bodyBgColor;
   overflow-y: auto;
@@ -293,8 +324,9 @@ select:not([multiple]) {
     list-style-type:none;
   }
   li {
-    margin-bottom: 1em;
+    margin-bottom: 1.2em;
     transform-origin: 0 100%;
+    max-width: 100px;
     cursor:pointer;
   }
   li:hover {
@@ -307,15 +339,12 @@ a.open, a.back {
   position: fixed;
   left: 1em;
   top: 12.3em;
-  z-index: 100;
+  z-index: 11;
   cursor: pointer;
   display: none;
 }
 a.open {
-  top: 14.4em;
-  &:hover {
-    color:@linkHover;
-  }
+  top: 14.5em;
 }
 a.back:hover {
   color: @linkHover;
@@ -329,15 +358,15 @@ div.left-panel {
   top: 0;
   left: 0;
   height:100%;
-  width:50px;
+  min-width:50px;
   background:@leftPanelBgColor;
   transition: width ease .5s;
-  z-index: -1;
+  z-index: 10;
   display: none;
 }
 
 body.open-nav .left-panel {
-    width:270px;
+    width:280px;
 }
 div.right-panel {
   position:relative;
@@ -415,7 +444,7 @@ div.right-panel {
     font-size: 1.1em;
   }
   #nameGroup {
-    margin-top: 3em;
+    margin-top: 2.5em;
     position: relative;
   }
   .bd-optional {
@@ -485,7 +514,7 @@ div.right-panel {
    border-radius: 100%;
    width: 52px;
    height: 52px;
-   font-size: 2.5em;
+   font-size: 3em;
    line-height: 1;
    content: "\2304";
    display: inline-block;
@@ -497,7 +526,7 @@ div.right-panel {
    -webkit-font-smoothing: antialiased;
    color: #ccc;
    position: absolute;
-   top: 1.1em;
+   top: 0.8em;
    left: 0;
    right: 0;
    margin-left: auto;
@@ -705,7 +734,7 @@ div.right-panel {
   transform: translate(0, -200px);
   transition: all 0.5s ease;
   z-index:9;
-  width:50%;
+  width:45%;
   min-width:200px;
   max-width:100%;
   border-radius: 4px;
@@ -715,6 +744,10 @@ div.right-panel {
   -webkit-box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
   -moz-box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
   box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
+  ul {
+    padding: 1em;
+    margin-top: -0.5em;
+  }
   li {
     cursor: pointer;
   }
@@ -734,10 +767,9 @@ div.right-panel {
   width: 100%;
   max-width: 100%;
   color: #575F5C;
-  border-top: 1px solid  #E0E6E3;
-  border-bottom: 1px solid  #E0E6E3;
-  padding: 0.6em 0.2em 0.63em 0.2em;
-  background-image: linear-gradient( to right, #ffffff, rgba(159, 165, 167, 0.16), rgba(173, 193, 197, 0.18) );
+  border-top: 1px solid #9E9E9E;
+  border-bottom: 1px solid  #9E9E9E;
+  padding: 0.7em 0.2em 0.83em 0.2em;
   vertical-align: center;
   span.index-list {
     display: block;
@@ -778,10 +810,11 @@ div.right-panel {
     font-family: Arial;
     color: @linkColor;
     font-size: 0.90em;
-    padding: 0.5em 1em;
+    padding: 0.61em 1em;
     border: solid #ccc 1px;
     text-decoration: none;
     letter-spacing: 1px;
+    top: 2px;
   }
 
   span:hover{
@@ -932,8 +965,15 @@ div.right-panel {
    -webkit-transition: height 0.8s ease-in;
   -moz-transition: height 0.8s ease-in;
   transition: height 0.8s ease-in;
+  .headline, 
+  .headline * {
+    letter-spacing: 1px;
+  }
   &.box-min-500 {
     min-height: 500px;
+    max-height: 600px;
+    margin: 2em auto;
+    overflow: hidden;
   }
   &.box-min-400 {
     min-height: 400px;
@@ -1167,10 +1207,9 @@ div.right-panel {
   /*background-color: rgba(173, 193, 197, 0.16);*/
   /*background-color: rgba(204, 206, 204, 0.25);*/
   background-image: linear-gradient(to top, #e8e8e8 0%, #f5f5f5 100%);
-  padding: 2em 2.5em 2.5em 2.5em;
-  border-radius: 8px;
+  padding: 1.5em 2.5em 3.5em 2.5em;
   margin: 0.5em auto;
-  border: 1px solid #E0E6E3;
+  border: 2px solid #bcc2a6;
   overflow-y: hidden;
   overflow-x: hidden;
   max-width: 100%;
@@ -1178,11 +1217,89 @@ div.right-panel {
 
 .profile-item-title {
   color: @sectionTitleColor;
-  margin-bottom: 1.3em;
+  margin-bottom: 1.5em;
+  letter-spacing: 1px;
+}
+
+.profile-item-edit-btn {
+  position: absolute;
+  top: 2em;
+  right: 2em;
+  margin-right: 1em;
+  z-index: 200;
+  height: 2.5em;
+  width: 70px;
+  padding: 0 0.7em;
+  /*background: linear-gradient(to bottom, #FFF, #e4e4e4);
+  border: solid 1px #dad8d8;*/
+  color: #FFF;
+  background: #79815d;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 0.9em;
+}
+.profile-item-edit-btn:hover,
+.profile-item-edit-btn:active,
+.profile-item-edit-btn:focus {
+  color: #FFF;
+  background-color: #5f676e;
+}
+.profile-item-edit-btn::before {
+  content: "EDIT";
+  position: absolute;
+  top: 0.5em;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+.content-container {
+  position: relative;
+}
+.profile-item-container.edit .profile-item-edit-btn::before {
+  content: "DONE";
+}
+.profile-item-container .edit-container {
+  display: none;
+}
+.profile-item-container.edit .edit-container {
+  display: inline-block;
+}
+.profile-item-container .view-container {
+  display: block;
+}
+.view-container td {
+  padding: 0.8em 1em;
+}
+#aboutForm .view-container {
+  display: none;
+}
+.profile-item-container.edit .view-container {
+  display: none;
+}
+.profile-item-title {
+  color: #5b5e61;
+  margin-bottom: 2em;
+  letter-spacing: 1px;
+}
+.profile-name-label, .profile-birthdate-label {
+  margin-bottom: -4px;
+}
+#patientQContainer {
+  width: 100%;
+  max-width: 100%;
+}
+#resetPasswordContainer {
+  flex-grow: 0.7;
+}
+.communication-prompt {
+  margin-bottom: 1em;
+}
+#registrationEmailContainer .communication-prompt{
+  margin-left: 1.7em;
 }
 
 .profile-name-label, .profile-birthdate-label {
-  margin-bottom: -6px;
+  margin-bottom: -4px;
 }
 
 .profile-create-item-container {
@@ -1214,8 +1331,14 @@ div.right-panel {
   margin-bottom: 0
 }
 
-#userRace label {
-  margin-bottom: 0
+#userRace  {
+  label {
+    margin-bottom: 0
+  }
+  .checkbox {
+  margin-left: 0.1em;
+  margin-right: 0.1em;
+  }
 }
 
 #userIndigenousStatusContainer {
@@ -1225,10 +1348,6 @@ div.right-panel {
   .radio label{
     margin-bottom: 4px;
   }
-}
-
-#genderLabel {
-  margin-bottom: 0
 }
 
 #userOrgs {
@@ -1319,6 +1438,12 @@ div.noOrg-container {
   padding: 3.5em 4em;
   width: 100%;
   max-width: 100%;
+  border: solid 2px #F1F1F1;
+  background-image: linear-gradient(to top, #e8e8e8 0%, #f5f5f5 100%);
+}
+
+.create-account-container .name-section {
+  padding-bottom: 0;
 }
 .left-indent-bottom {
   margin-left: 3.2em;
@@ -2057,9 +2182,7 @@ div.timezone-warning.text-warning {
   #profile-gender-list input[type=radio] {
     top: -2px;
    }
-  #profileAuditLogTable, #profileConsentList {
-    font-size: 0.6em;
-  }
+
   #profileConsentList {
     font-size: 0.5em
   }
@@ -2177,7 +2300,6 @@ div.timezone-warning.text-warning {
       margin-bottom: 1em;
     }
     .feature-btn-primary {
-      margin-top: 1em;
       font-weight: bold;
       padding: 6px 24px;
       font-size: 22px;
@@ -2187,12 +2309,17 @@ div.timezone-warning.text-warning {
     font-size: 24px;
   }
 }
-@media (min-width: 797px) {
+@media (min-width: 827px) {
   #indexNavBar, #indexContainer {
     display: none;
   }
   div.left-panel, a.back, a.open {
     display: block;
+  }
+}
+@media (max-width: 828px) {
+   div.right-panel {
+    margin-left: 0 !important;
   }
 }
 @media (min-width: 991px) {
@@ -2240,11 +2367,6 @@ div.timezone-warning.text-warning {
   }
   .custom-container {
     display: block;
-    .custom-container-item, .custom-container-item-right {
-      font-size: @smallText;
-      width: 100%;
-      max-width: 100%;
-    }
     #profileEmailSelect {
       width: 90%;
       max-width: 100%;
@@ -2269,6 +2391,7 @@ div.timezone-warning.text-warning {
   }
   .tnth-headline {
     font-size: @lgHeadlineSize;
+    letter-spacing: 1px;
   }
   .tnth-subhead {
     font-size: @lgsubheadSize;
@@ -2335,6 +2458,12 @@ div.timezone-warning.text-warning {
   #adminTable .organization-field {
     display: none;
   }
+  .custom-container-item,
+  .custom-container-item-right {
+      font-size: @smallText;
+      width: 100%;
+      max-width: 100%;
+  }
   #profileForm {
     #date {
       width: 50px;
@@ -2363,13 +2492,13 @@ div.timezone-warning.text-warning {
 }
 @media (min-width: 1200px) {
   body.open-nav .footer-wrapper {
-    margin-left: 270px !important;
+    margin-left: 25% !important;
    }
   #fullSizeContainer {
     padding: 60px 0 60px;
   }
   #wellContainer {
-    padding: 60px 60px 100px;
+    padding: 50px 50px 100px;
   }
   #fullSizeLogo {
     height: 100px;
@@ -2411,11 +2540,11 @@ div.timezone-warning.text-warning {
     height: 680px;
   }
   #stickyMenu {
-    width: 150px !important;
-    font-size: 0.7em !important;
+    width: 160px !important;
+    font-size: 0.9em !important;
   }
   body.open-nav .left-panel {
-    width: 215px;
+    width: 235px;
   }
   body.open-nav .footer-wrapper {
     margin-left: 215px !important;
@@ -2453,44 +2582,44 @@ div.timezone-warning.text-warning {
   }
 }
 
+@media (min-width: 1492px) {
+  #profileSendEmailContainer {
+    margin-left: 1.5em;
+  }
+}
 @media (max-width: 1745px) {
   body.open-nav .right-panel {
-    margin-left: 60px;
+    margin-left: 30px;
   }
 }
 @media (max-width: 1632px) {
   body.open-nav .right-panel {
-    margin-left: 100px;
+    margin-left: 50px;
   }
 }
 @media (max-width: 1560px) {
   body.open-nav .right-panel {
-    margin-left:140px;
+    margin-left: 90px;
   }
 }
 @media (max-width: 1491px) {
   body.open-nav .right-panel {
-    margin-left:180px;
+    margin-left:130px;
   }
 }
 @media (max-width: 1399px) {
   body.open-nav .right-panel {
-    margin-left:200px;
+    margin-left:150px;
   }
 }
 @media (max-width: 1341px) {
   body.open-nav .right-panel {
-    margin-left:190px;
+    margin-left:120px;
   }
 }
 @media (max-width: 1243px) {
   body.open-nav .right-panel {
-    margin-left:200px;
-  }
-}
-@media (max-width: 1271px) {
-  div.right-panel {
-    margin-left: 2.5em;
+    margin-left:150px;
   }
 }
 @media (max-width: 1199px) {
@@ -2500,17 +2629,22 @@ div.timezone-warning.text-warning {
 }
 @media (max-width: 1169px) {
   body.open-nav .right-panel {
-    margin-left:140px;
+    margin-left:100px;
   }
 }
 @media (max-width: 1130px) {
   body.open-nav .right-panel {
-    margin-left:160px;
+    margin-left:120px;
   }
 }
 @media (max-width: 1077px) {
   body.open-nav .right-panel {
-    margin-left:210px;
+    margin-left:160px;
+  }
+}
+@media (max-width: 940px) {
+  body.open-nav .right-panel {
+    margin-left: 180px;
   }
 }
 @media (max-width: 991px) {
