--- a/portal/templates/profile_create.html
+++ b/portal/templates/profile_create.html
@@ -20,11 +20,9 @@
         <div class="col-md-11">
             <div class="row">
                 <div class="col-md-push-2 col-md-9 col-xs-12">
-                    <hr>
                     <h4 class="tnth-headline left-indent-top">{{ _("New User") }}</h4>
                     <hr/>
                     <br/>
-
                     <div class="profile-item-container create-account-container">
                     <div class="row">
                         <div class="col-md-11 col-xs-12">
@@ -68,7 +66,12 @@
 
                             if (leafOrgs) {
                                 OT.filterOrgs(leafOrgs);
-                            }
+                            };
+
+                             var userOrgs = $("#userOrgs input[name='organization']").not('[parent_org]');
+                             userOrgs.each(function() {
+                                $(this).attr("type", "radio");
+                             });
 
                             //console.log(orgsList)
                             $("#userOrgs input[name='organization']").each(function() {
