remove edit-only class from birthday group fields, minor create account fix

--- a/portal/templates/profile_create.html
+++ b/portal/templates/profile_create.html
@@ -207,7 +207,7 @@ $(document).ready(function(){
                     };
                 };
 
-                if ($("#userOrgs input:checkbox:checked").length == 0) {
+                if ($("#userOrgs input:checked").length == 0) {
                    setHelpText("userOrgs", "An organization must be selected.", true);
                 } else setHelpText("userOrgs", "", false);
 
